[package]
name = "kbpwrd"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "A daemon for managing the pinephone keyboard case battery"
homepage = "https://github.com/estokes/pinephone-kbpwrd"
repository = "https://github.com/estokes/pinephone-kbpwrd"
readme = "README.md"
keywords = ["pinephone", "keyboard", "case"]
categories = ["hardware-support"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
tokio = { version = "1", features = ["rt", "fs", "time", "macros"] }
serde = "1"
serde_derive = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.9"
